--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -3,19 +3,23 @@ layout: default
 ---
 
 <div class="hero-wrapper">
-	<div class="hero">
+	<div id="hero" class="hero">
+		<div class="hero-left"></div>
 		<div class="container-fluid text-center">
 			<h1 class="mb-3">{{ site.title }}</h1>
 			<h3 class="text-uppercase mb-4">{{ site.description }}</h3>
-			<a class="btn btn-outline-light" href="https://github.com/brettwickham/brettwickham.github.io" target="_blank">View on GitHub</a>
+			<a class="btn btn-outline-light" href="https://github.com/brettwickham/brettwickham.github.io" target="_blank">View source</a>
 		</div>
 	</div>
 </div>
 
 <main class="site-main">
 	<div class="container">
+		<div class="lead">
 
-		{{ content }}
+			{{ content }}
+
+		</div>
 
 		<!-- Container for React app -->
 		<div id="project-list"></div>
