--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,13 +26,13 @@ body {
 }
 
 .site-footer {
-	padding: 2rem;
+	padding: 1rem;
 	margin: 2rem;
 	background-color: rgb(248, 248, 250);
 }
 
 .hero-wrapper {
-	/*height: 100%;*/
+	height: 100%;
 	padding: 2rem;
 }
 .hero {
@@ -43,28 +43,32 @@ body {
 	background-image: url(/assets/images/site/hero-bg.jpg);
 	background-size: cover;
 	background-position: center;
-	&:before {
-		content: " ";
-		display: block;
-		position: absolute;
-		z-index: 0;
-		right: 0;
-		top: 0;
-		bottom: 0;
-		width: 50%;
-		/*background-color: rgba(248, 248, 250, .9);*/
-		background-color: rgba(68, 108, 179, .5);
-	}
+	.hero-left,
 	&:after {
 		content: " ";
 		display: block;
 		position: absolute;
 		z-index: 0;
-		left: 0;
 		top: 0;
 		bottom: 0;
-		width: 50%;
-		background-color: rgba(68, 108, 179, .9);
+	}
+	&:after {
+		left: 0;
+		width: 100%;
+		background-color: rgba(68, 108, 179, .5);
+	}
+	.hero-left {
+		left: 0;
+		width: 100%;
+		background-color: rgba(68, 108, 179, .75);
+		-moz-transition: width 1000ms ease-out;
+		-webkit-transition: width 1000ms ease-out;
+		transition: width 1000ms ease-out;
+	}
+	&.in {
+		.hero-left {
+			width: 50%;
+		}
 	}
 	h1,
 	h2,
@@ -80,8 +84,9 @@ body {
 	.container-fluid {
 		position: relative;
 		z-index: 1;
-		/*top: 50%;
-		transform: translateY(-50%);*/
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+		transform: translateY(-50%);
 	}
 }
 
