--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
 	<div class="container">
 		<h4>{{ site.title }}</h4>
-		<p>{{ site.description }}</p>
+		<p class="mb-0">{{ site.description }}</p>
 	</div>
 </footer>
