--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,6 +17,14 @@ body {
 	height: 100%;
 }
 
+a {
+	color: $color-primary;
+	&:hover,
+	&:focus {
+		color: darken($color-primary, 8%);
+	}
+}
+
 .site-main {
 	/*font-size: 1.15rem;*/
 	h2 {
@@ -26,7 +34,7 @@ body {
 }
 
 .site-footer {
-	padding: 1rem;
+	padding: 2rem;
 	margin: 2rem;
 	background-color: rgb(248, 248, 250);
 }
