--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,7 +26,6 @@ a {
 }
 
 .site-main {
-	/*font-size: 1.15rem;*/
 	h2 {
 		font-size: 2.5rem;
 		text-align: center;
@@ -44,6 +43,7 @@ a {
 	padding: 2rem;
 }
 .hero {
+	overflow: hidden;
 	color: #fff;
 	position: relative;
 	padding: 10rem 2rem;
@@ -59,23 +59,26 @@ a {
 		z-index: 0;
 		top: 0;
 		bottom: 0;
+		left: 0;
+		right: 0;
+		width: 100%;
 	}
 	&:after {
-		left: 0;
-		width: 100%;
 		background-color: rgba(68, 108, 179, .5);
 	}
 	.hero-left {
-		left: 0;
-		width: 100%;
 		background-color: rgba(68, 108, 179, .75);
-		-moz-transition: width 1000ms ease-out;
-		-webkit-transition: width 1000ms ease-out;
-		transition: width 1000ms ease-out;
+		-webkit-transition: transform 1000ms ease-out;
+		transition: transform 1000ms ease-out;
 	}
 	&.in {
 		.hero-left {
-			width: 50%;
+			transform: translateX(-50%);
+		}
+	}
+	&.scrolling {
+		.hero-left {
+			transition: transform 100ms ease-out;
 		}
 	}
 	h1,
