--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -8,7 +8,9 @@ layout: default
 		<div class="container-fluid text-center">
 			<h1 class="mb-3">{{ site.title }}</h1>
 			<h3 class="text-uppercase mb-4">{{ site.description }}</h3>
-			<i class="icon icon--arrow-hint animated animated--infinite pulse"></i>
+			<a class="smooth-scroll" href="#projects">
+				<i class="icon icon--arrow-hint animated animated--infinite pulse"></i>
+			</a>
 		</div>
 	</div>
 </div>
