--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,5 +1,13 @@
+<!-- Page hiding snippet  -->
+<!-- <style>.async-hide { opacity: 0 !important} </style>
+<script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
+h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
+(a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
+})(window,document.documentElement,'async-hide','dataLayer',4000,
+{'GTM-XXXXXX':true});</script> -->
+
 <!-- Google Analytics -->
-<script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -7,4 +15,4 @@
   ga('create', 'UA-41662528-2', 'auto');
   ga('require', 'GTM-MQMDNH9');
   ga('send', 'pageview');
-</script>
+</script> -->
