--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,4 @@
-<!-- Page hiding snippet  -->
+<!-- Page hiding snippet (not necessary at this point) -->
 <!-- <style>.async-hide { opacity: 0 !important} </style>
 <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
 h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
@@ -7,7 +7,7 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 {'GTM-XXXXXX':true});</script> -->
 
 <!-- Google Analytics -->
-<!-- <script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -15,4 +15,4 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
   ga('create', 'UA-41662528-2', 'auto');
   ga('require', 'GTM-MQMDNH9');
   ga('send', 'pageview');
-</script> -->
+</script>
